--- a/Reforcing-JS-Mechanics/timer/assets/css/style.css
+++ b/Reforcing-JS-Mechanics/timer/assets/css/style.css
@@ -57,6 +57,11 @@ form button:hover {
   background: var(--primary-color-darker);
 }
 
+
+button{
+  margin: 3px;
+  padding: 8px 15px;
+}
 h1 {
   text-align: center;
 }
@@ -76,14 +81,23 @@ h3{
   padding: 10px;
 }
 
-button{
-  margin: 3px;
-}
-
 .started{
-  color: green;
+  color: rgb(33, 170, 56);
 }
 
 .stopped{
-  color: red;
+  color: rgb(245, 90, 90);
+}
+
+
+.start:hover{
+  background-color: rgb(187, 226, 147);
+}
+
+.stop:hover{
+  background-color: rgb(209, 132, 132);
+}
+
+.clear:hover{
+  background-color: rgb(212, 209, 209);
 }
