align calculator at center

--- a/calculator/assets/css/style.css
+++ b/calculator/assets/css/style.css
@@ -24,6 +24,9 @@ body {
   background: #fff;
   padding: 20px;
   border-radius: 10px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 form input, form label, form button {
